docs/apim/4.11/secure-and-expose-apis/plans/README.md
---
description: A plan is the service and access layer an API Management 4.11 API needs before you expose it. Compare the plan types available.
metaLinks:
  alternates:
    - ./
---

# Plans

## Overview

To expose your API to internal or external consumers, it must have at least one plan. A plan provides a service and access layer on top of your API that specifies access limits, subscription validation modes, and other configurations to tailor it to an application. Gravitee offers the following types of plans: Keyless, Basic Authentication, API Key, OAuth2, JWT, Push (Webhooks), and Mutual TLS (mTLS).

Example access scenarios APIM can manage with plans include:

* Read-only access and limited request traffic for potential customers to discover and try out your APIs
* Premium access with public resources and access limits for your partners
* Unlimited access to your internal enterprise applications

<div align="center"><figure><img src="../../.gitbook/assets/plan-diagram.png" alt="A diagram showing an application subscribing to one of three plans, which in turn sit in front of an API." width="375"><figcaption><p>High-level plan diagram</p></figcaption></figure></div>

Each plan must include at least one security type by which subscribers can be authenticated. A security type is a policy integrated directly into a plan. Once a plan is created, the security type can not be changed. However, you can add additional security at the API or plan level with policies.

### NTLM authentication

APIM doesn't support NTLM authentication. There's no NTLM plan security type for authenticating client applications, and no NTLM option for authenticating the Gateway against backend endpoints.

* To secure client access to an API, use one of the supported plan security types: Keyless, API Key, JWT, OAuth2, or mTLS.
* To authenticate the Gateway against a backend endpoint, configure a client certificate in the SSL options of the endpoint, or add an `Authorization` header with the Transform Headers policy. For more information, see [Transform Headers](../../create-and-configure-apis/apply-policies/policy-reference/transform-headers.md).

## Create a plan

To create a plan:

1. Log in to your APIM Console
2. Select **APIs** from the left nav
3. Select your API
4. Select **Consumers** from the inner left nav
5.  Under the **Plans** header tab, click **+ Add new plan** and select your plan security type:

    <figure><img src="../../.gitbook/assets/plan_select security type.png" alt="The Plans tab of an API&#x27;s Consumers page with the Add new plan menu open, listing the available plan types."><figcaption><p>Add a new plan</p></figcaption></figure>
6.  Configure the general plan settings:

    <figure><img src="../../.gitbook/assets/plan_general.png" alt="The General step of plan creation, with empty name, description, and characteristics fields and both subscription toggles switched off."><figcaption><p>Configure general plan settings</p></figcaption></figure>

    * **Name:** Enter a name for your plan
    * **Description:** Enter a description of your plan
    * **Characteristics:** Define labels used to tag your plan
    * **Page of General Conditions:** If you want to enforce subscribers to review a Terms of Conditions (or another similar page), then select a published [Documentation](../../create-and-configure-apis/configure-v4-apis/documentation.md) page whose terms must be accepted by the user to finalize the subscription process
    * Toggle **Auto validate subscription** ON to accept all subscriptions to a plan without the API publisher's approval
    * Toggle **Consumer must provide a comment when subscribing to the plan** ON to require an explanation for the subscription request, with the option to leave a **Custom message to display to consumer**
    * **Sharding tags:** Selectively deploy the plan to particular API Gateways using available [sharding tags](../../configure-and-manage-the-platform/gravitee-gateway/sharding-tags.md)
    * **Groups excluded:** Prevent specified [user groups](../../configure-and-manage-the-platform/manage-organizations-and-environments/user-management.md) from accessing this plan
7. Click **Next**
8.  Define the security configuration details appropriate to and required by your selected security type, e.g., OAuth2. See [OAuth2](oauth2.md), [JWT](jwt.md), [API Key](api-key.md), [Keyless](keyless.md), or [Push](push.md) for more information.

    <figure><img src="../../.gitbook/assets/plan_oauth2.png" alt="The OAuth2 authentication configuration step of plan creation, with empty resource fields, scope checking off, strict mode and authorization header propagation on, and an additional selection rule field."><figcaption><p>OAuth2 configuration</p></figcaption></figure>
9.  Select any plan restrictions:

    <figure><img src="../../.gitbook/assets/plan_restrictions.png" alt="The Restriction step of plan creation, with rate limiting, quota, and resource filtering all switched off."><figcaption><p>Select plan restrictions</p></figcaption></figure>

    * **Rate limiting:** Intended to help avoid unmanageable spikes in traffic by limiting the number of requests an application can make in a given time period.
    * **Quota:** Limits the number of requests an application can make in a given time period. Generally used to tier access to APIs based on subscription level.
    * **Resource Filtering:** Limits access to API resources according to whitelist and/or blacklist rules.
10. Click **Create**

## Plan stages

A plan can exist in one of four stages: **STAGING**, **PUBLISHED**, **DEPRECATED**, and **CLOSED**:

{% tabs %}
{% tab title="STAGING" %}
This is the draft mode of a plan, where it can be configured but won’t be accessible to users.
{% endtab %}

{% tab title="PUBLISHED" %}
API consumers can view a published plan on the Developer Portal. Once subscribed, they can use it to consume the API. A published plan can still be edited.
{% endtab %}

{% tab title="DEPRECATED" %}
A deprecated plan won’t be available on the Developer Portal and API consumers won’t be able to subscribe to it. This cannot be undone. Existing subscriptions are not impacted, giving current API consumers time to migrate without breaking their application.
{% endtab %}

{% tab title="CLOSED" %}
Once a plan is closed, all associated subscriptions are closed. API consumers subscribed to this plan won’t be able to use the API. This cannot be undone.
{% endtab %}
{% endtabs %}

Depending on the stage it's in, a plan can be edited, published, deprecated, or closed via the icons associated with it:

{% tabs %}
{% tab title="Edit" %}
To edit a plan, click on the pencil icon:

<figure><img src="../../.gitbook/assets/plan_edit.png" alt="The Plans tab with the PUBLISHED filter selected and the Edit the plan tooltip shown over the pencil icon for a keyless plan."><figcaption><p>Edit a plan</p></figcaption></figure>
{% endtab %}

{% tab title="Publish" %}
To publish a plan, click on the icon of a cloud with an arrow:

<figure><img src="../../.gitbook/assets/plan_publish.png" alt="The Plans tab with the STAGING filter selected and the Publish the plan tooltip shown over the upload icon for an OAuth2 plan."><figcaption><p>Publish a plan</p></figcaption></figure>

Once a plan has been published, it must be redeployed.
{% endtab %}

{% tab title="Deprecate" %}
To deprecate a plan, click on the icon of a cloud with an 'x':

<figure><img src="../../.gitbook/assets/plan_deprecate.png" alt="The Plans tab with the PUBLISHED filter selected and the Deprecate the plan tooltip shown over the cloud icon for a keyless plan."><figcaption><p>Deprecate a plan</p></figcaption></figure>
{% endtab %}

{% tab title="Close" %}
To close a plan, click on the 'x' icon:

<figure><img src="../../.gitbook/assets/plan_close.png" alt="The Plans tab with the STAGING filter selected and the Close the plan tooltip shown over the cross icon for an OAuth2 plan."><figcaption><p>Close a plan</p></figcaption></figure>
{% endtab %}
{% endtabs %}

## Plan selection rules

APIM automatically routes each API request to the correct plan. The plan selection workflow parses all published plans in the following order: **JWT**, **OAuth2**, **API Key**, **Keyless**.

{% hint style="warning" %}
This workflow only applies to [v4 APIs and v2 APIs in emulation mode](../../create-and-configure-apis/gravitee-api-definitions/execution-engine.md#v2-gateway-api-emulation-mode).
{% endhint %}

The parsing rules for each plan type are detailed below:

{% tabs %}
{% tab title="JWT" %}
* Retrieve JWT from the `Authorization` header or query parameters (query parameter: `access_token`)
* Ignore an empty `Authorization` header or any type other than Bearer
* An empty Bearer token is considered invalid
{% endtab %}

{% tab title="OAuth2" %}
* Retrieve OAuth2 from the `Authorization` header or query parameters (query parameter: `access_token`)
* Ignore an empty `Authorization` header or any type other than Bearer
* An empty Bearer token is considered invalid
* When multiple OAuth2 plans are configured, the Gateway calls the introspection endpoint on **all** configured OAuth2 resources before evaluating selection rules. For more information, see [OAuth2 plan introspection behavior.](oauth2.md#introspection-behaviour-with-multiple-oauth2-plans)
{% endtab %}

{% tab title="API Key" %}
* Retrieve the API key from the request header or query parameters (default header: `X-Gravitee-Api-Key`; default query parameter: `api-key`)
* An empty Bearer token is considered invalid
{% endtab %}

{% tab title="Keyless" %}
* Will ignore any type of security (API key, Bearer token, etc.)
* If another plan has detected a security token, valid or invalid, all flows assigned to the Keyless plan will be ignored
  * If an API has multiple plans of different types and the incoming request contains a token or an API key that does not match any of the existing plans, then the Keyless plan will not be activated and the user will receive a generic `401` response without any details
{% endtab %}
{% endtabs %}

The parsed plan is selected for execution if all the following conditions are met:

* The request contains a token corresponding to the plan type (e.g., an `X-Gravitee-Api-Key` header for an API Key plan)
* The plan condition rule is valid or not set
